--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   <!-- HEADER -->
   <header class="header">
     <div class="header-left">
-      <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" class="logo-image">
+<img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="logo-image">
       <h1 class="site-title">AI Code Debugger</h1>
     </div>
     
