Final fix for all route names and session variables

--- a/templates/about.html
+++ b/templates/about.html
@@ -15,13 +15,13 @@
       <h1 class="site-title">AI Code Debugger</h1>
     </div>
     
-    <nav class="nav">
-      <ul class="nav-list">
-        <li><a href="{{ url_for('index') }}" class="nav-item">Home</a></li>
-        <li><a href="{{ url_for('debug_code') }}" class="nav-item">Debug Code</a></li>
-        <li><a href="#" class="nav-item active">About</a></li>
-      </ul>
-    </nav>
+   <nav class="nav">
+  <ul class="nav-list">
+    <li><a href="{{ url_for('home') }}" class="nav-item">Home</a></li>
+    <li><a href="{{ url_for('view_history') }}" class="nav-item">My History</a></li>
+    <li><a href="#" class="nav-item active">About</a></li>
+  </ul>
+</nav>
   </header>
 
   <main class="main-wrapper">
